# mtmai

./: .gitignore  =1.70.0  blog_post.md  credentials.json  downloads_folder  hello.srt  pyproject.toml  pyrightconfig.json--  ruff.toml
.cursor/rules/: rule1.mdc
.github/actions/setup_bun/: action.yml
.github/workflows/: release.yml
.vol/news_report_generator/: workflows.db
storage/json/: step2_20250505_104738.json  step2_20250505_105639.json  step2_20250505_110011.json  step2_20250505_113024.json  step2_20250505_113611.json  step2_20250505_120125.json  step2_20250505_123223.json  step2_20250505_123956.json  step2_20250505_124921.json
