[dependency-groups]
dev = [
    "burr[start]>=0.22.1",
    "pyright==1.1.389",
    "mypy==1.13.0",
    "ruff==0.4.8",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "typer",
    "rich",
    "polars",
    "pytest_mock",
    # "poethepoet",
    "packaging",
    # "grpcio-tools~=1.62.0",
    # "mypy-protobuf",
    "cookiecutter",
    "poethepoet",
    "tomli",
    "tomli-w",
    # "chainlit",
]
[tool.uv.sources]
mtmai = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = [
    "packages/libs",
    "packages/mtmtrain",
    "packages/mtcrawl",
    "packages/mtmaiapi",
    "packages/mtxuilib",
    "packages/mtxlib",
    "packages/mtmaifrontui",
    "packages/mtmaiui-backup",
    "packages/mtxuilib-backup",
    "packages/mtmaiui",
]

[tool.setuptools]
packages = ["mtmairoot", "packages/mtmai"]
package-dir = { "" = "." }
namespace-packages = ["packages"]


[build-system]
requires = ["hatchling>=1.0.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
allow-direct-references = true
packages = ["mtmairoot", "packages/mtmai"]
exclude = ["tests/**", "examples/**"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["mtmairoot", "packages/mtmai"]


#[tool.hatch.build.hooks.vcs]
#version-file = "mtmairoot/_version.py"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]

# [tool.hatch.build.targets.sdist]
# include = [
#     "src",
#     "pyproject.toml",
#     "README.md",
#     "LICENSE",
# ]

[tool.hatch.metadata]
allow-direct-references = true

# [dependency-groups]
# dev = ["burr[start]==0.22.1", "sphinx==6.0", "furo==2024.5.6"]

[tool.uv]
dev-dependencies = [
    "poethepoet>=0.31.1",
    "pytest-asyncio>=0.24.0",
    # "pytest==8.0.0",
    "pytest-mock>=3.14.0",
    "pylint>=3.2.5",
]
